# drawings

./: .coverage  .env.example  .env.production  .flake8  .gitignore  .pre-commit-config.yaml  ANALYSIS_FIX_SUMMARY.md  CI_PIPELINE_STATUS_AND_FIXES.md  DATABASE_INDEX_RECOMMENDATIONS.md  DEPENDENCY_UPDATE_SUMMARY.md  DEPLOYMENT.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile.backend  Dockerfile.prod  EMBEDDING_SERVICE_UPDATE_SUMMARY.md  OFFLINE_TRAINING_TUTORIAL.md  OPTIONAL_DEPENDENCIES.md  README.md  SECURITY_ENDPOINTS_TODO.md  SUBJECT_AWARE_UPGRADE_SUMMARY.md  TRAINING.md  alembic.ini  analyze_all_drawings.py  analyze_drawings_direct.py  check_analysis_status.py  clean_old_analyses.py  coverage.xml  create_sample_drawings.py  current-task-def.json  database_migration_cli.py  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  drawings.db-shm  drawings.db-wal  final_production_readiness_report.json  final_production_validation.py  fix_analysis_contradictions.md  fix_boundary_analyses.py  (+34 more)
.github/workflows/: README.md  deploy-production.yml  frontend-ci.yml
.hypothesis/constants/: 00b96034f2107527  01b35f8ccd5d127f  12fc769f77d0b833  14d4d02f3583f355  156f1cc8f994e5b1  167111a0ea1856b9  17a31552063dd106  19829853defef03f  1e6c2047ea57d6af  2035837c53fdb387  2382c370ef3c1fb1  27e6d8a6a3e1c568  2bd9f2408c8bc00a  2dfc6487c89f7edb  2e9c7acc4ab9d318  318ff121a5370089  340e17b6a7f21337  34c2bc5ba9b79f9f  36c62c88f8e4f1cb  3da3689d60e53515  3e9303af08d282c9  40feb9a307c4bdd7  42ad68e27e20098d  43f41166b350b760  4ba06f7a51e656aa  4c42a549bfbb51cc  4db80a2258b9f8a6  4ec331845cfe6554  5641d5867e80986d  568a3f9df1c4f527  (+71 more)
alembic/: env.py
app/: __init__.py  main.py
docs/: CONTRIBUTING.md  DOCUMENTATION_METHODOLOGY.md  README.md  SUBJECT_AWARE_UPGRADE.md  cost-optimization.md  testing.md
frontend/: .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
infrastructure/: DEPLOYMENT_STATUS.md  README.md  cost-optimized-infrastructure.yaml  deploy.sh  github-actions-workflow.yml  main-infrastructure.yaml  monitoring.yaml  networking.yaml  parameters.json.template
scripts/: algorithm_documentation_generator.py  api_auto_updater.py  api_documentation_generator.py  c4_templates.py  export_engine.py  format_consistency_validator.py  generate_docs.py  latex_renderer.py  latex_rendering_system.py  migrate_to_subject_aware.py  navigation_engine.py  performance_analysis_generator.py  retrain_subject_aware_models.py  search_engine.py  setup-production.sh  swagger_ui_generator.py  validate_cost_optimization.py  validate_subject_aware_training.py  validation_engine.py  workflow_documentation_generator.py
tests/: conftest.py  test_algorithm_documentation_generator.py  test_api_documentation_generator.py  test_batch_processing.py  test_c4_architecture_generator.py  test_comparison_example_provision.py  test_data_pipeline.py  test_database_migration_service.py  test_database_models.py  test_dataset_preparation.py  test_documentation_generation_engine.py  test_edge_cases.py  test_embedding_serialization.py  test_embedding_service.py  test_end_to_end_integration.py  test_error_handling.py  test_input_validation.py  test_insufficient_data_warnings.py  test_interface_documentation_generator.py  test_interpretability_engine.py  test_mathematical_calculations.py  test_model_export_compatibility.py  test_model_manager.py  test_multi_format_export_engine.py  test_property_10_security_configuration_enforcement.py  test_property_11_cost_boundary_compliance.py  test_property_12_monitoring_and_alerting_reliability.py  test_property_13_backup_and_recovery_integrity.py  test_property_14_demo_content_completeness.py  test_property_1_environment_configuration_detection.py  test_property_22_error_handling_robustness.py  test_property_28_subject_category_validation.py  test_property_29_subject_encoding_consistency.py  test_property_2_environment_data_isolation.py  test_property_30_hybrid_embedding_construction.py  test_property_31_subject_fallback_handling.py  test_property_32_hybrid_embedding_dimensionality.py  test_property_33_hybrid_embedding_serialization.py  test_property_34_subject_aware_model_training.py  test_property_35_subject_stratification_balance.py  (+22 more)
(+1894 files in other folders)
