[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "children-drawing-anomaly-detection"
version = "0.1.0"
description = "Machine learning system for detecting anomalies in children's drawings"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.40.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    "python-multipart>=0.0.18",
    "pillow>=10.1.0",
    # "opencv-python>=4.8.1.78",  # Optional: Advanced image processing
    "torch>=2.1.0",
    "transformers>=4.35.0",
    "numpy>=1.25.2",
    "pandas>=2.1.3",
    "scikit-learn>=1.3.2",
    "captum>=0.6.0",
    "hypothesis>=6.88.1",
    "aiofiles>=23.2.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[tool.setuptools]
packages = ["app"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=24.3.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]
enhanced = [
    "opencv-python>=4.8.1.78",  # Advanced image processing and contour detection
    "reportlab>=4.0.0",         # PDF generation for comprehensive reports
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = false
strict_optional = false
check_untyped_defs = false
disallow_any_generics = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false

# Ignore specific error codes that are common in this codebase
disable_error_code = [
    "no-untyped-def",
    "no-untyped-call", 
    "attr-defined",
    "assignment",
    "arg-type",
    "return-value",
    "union-attr",
    "index",
    "operator",
    "misc",
    "call-overload",
    "var-annotated",
    "import-untyped",
    "import-not-found",
    "no-any-return",
    "override",
    "name-defined",
    "no-redef",
    "valid-type"
]

# Per-module configuration
[[tool.mypy.overrides]]
module = [
    "app.services.*",
    "app.api.api_v1.endpoints.*",
    "app.schemas.*"
]
ignore_errors = true